[package]
name = "cconv"
version = "0.1.0"
edition = "2021"
authors = ["Marcin Makulec <m.makulec321@gmail.com>"]
description = "Converts amounts between currencies"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
reqwest = "0.11.26"
serde = "1.0.197"
serde_json = "1.0.114"

